<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonNewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Note"
        android:backgroundTint="?attr/buttonFill"
        android:textColor="?attr/textColor"/>

    <Button
        android:id="@+id/buttonNewTaskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Task List"
        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/buttonFill"
        android:textColor="?attr/textColor"/>
</LinearLayout>